[Raj] Bugs:- Fixed Some Bugs Related To Scss Overlap

--- a/src/app/components/forgotpassword/forgotpassword.component.scss
+++ b/src/app/components/forgotpassword/forgotpassword.component.scss
@@ -12,15 +12,15 @@
     color: #ffffff;
 }
 
-.text {
+.forgot_text {
     margin-left: 5px;
 }
 
-.form_layout {
+.forgotpass_form_layout {
     margin-top: 70px;
 }
 
-h2 {
+.forgotPass_header {
     font-family: normal normal medium 25px/33px Roboto;
     letter-spacing: 0px;
     color: #0A0102;
@@ -29,7 +29,7 @@ h2 {
     color: #0A0102;
 }
 
-.form_container {
+.forgotpass_form_container {
     width: 450px;
     height: 350px;
     box-shadow: 0px 5px 15px #00000029;
@@ -42,13 +42,13 @@ h2 {
     padding: 10px;
 }
 
-.form {
+.forgotpassform {
     width: 300px;
     height: 300px;
     margin-left: -20px;
 }
 
-.emailinfo {
+.forgotpassformemailinfo {
     text-align: left;
     font-family: normal normal normal 15px/20px Roboto;
     margin-top: 20px !important;
@@ -60,27 +60,32 @@ h2 {
 }
 
 ::ng-deep .mat-form-field-flex {
-    height: 45px;
+    height: 45px !important;
     margin-top: 8px !important;
     align-items: center !important;
     justify-content: center !important;
     background: transparent !important;
 }
 
-::ng-deep .mat-input-element {
+::ng-deep .forgotpassformfield {
+    height: 90px !important;
+    width: 300px !important;
+}
+
+::ng-deep .matforgotpassinput {
     margin-bottom: 7px !important;
     width: 332px !important;
     height: 30px !important;
 }
 
-.signupbutton {
+.forgotpassbutton {
     width: 300px;
     background-color: #A03037;
     color: #ffffff;
     margin-top: 5px;
 }
 
-.googlebutton {
+.createbutton {
     width: 300px;
     background: #F5F5F5 0% 0% no-repeat padding-box;
     border: 1px solid #E4E4E4;
