--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -48,7 +48,7 @@
 
 .form_head {
     display: flex;
-    width: 220px;
+    width: 232px;
     height: 30px;
     justify-content: space-between;
     padding: 30px 90px 20px 90px;
@@ -68,7 +68,7 @@
 
 .login_active {
     color: #0A0102;
-    border-bottom: 2px solid red;
+    border-bottom: 3px solid #A03037;
 }
 
 .signup {
@@ -83,7 +83,7 @@
 }
 
 .signup_active {
-    border-bottom: 2px solid red;
+    border-bottom: 3px solid #A03037;
     color: #0A0102;
 }
 
@@ -93,7 +93,7 @@
     margin-left: -30px;
 }
 
-.mat-form-field {
+::ng-deep .mat-form-field {
     width: 252px;
     height: 30px;
     margin-top: -17px;
@@ -158,9 +158,11 @@ h2 {
     margin-top: -1px;
 }
 
-.mat-button.mat-primary,
-.mat-icon-button.mat-primary,
-.mat-stroked-button.mat-primary {
+.mat-flat-button.mat-primary,
+.mat-raised-button.mat-primary,
+.mat-fab.mat-primary,
+.mat-mini-fab.mat-primary {
+    background-color: transparent;
     font-size: 12px;
     padding: 2px 5px;
     margin-top: -8%;
