--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -48,7 +48,7 @@
 
 .form_head {
     display: flex;
-    width: 220px;
+    width: 232px;
     height: 30px;
     justify-content: space-between;
     padding: 30px 90px 20px 90px;
@@ -68,7 +68,7 @@
 
 .login_active {
     color: #0A0102;
-    border-bottom: 2px solid red;
+    border-bottom: 3px solid #A03037;
 }
 
 .signup {
@@ -90,7 +90,7 @@
 }
 
 .signup_active {
-    border-bottom: 2px solid red;
+    border-bottom: 3px solid #A03037;
     color: #0A0102;
 }
 
@@ -100,7 +100,7 @@
     margin-left: -30px;
 }
 
-.mat-form-field {
+::ng-deep .mat-form-field {
     width: 252px;
     height: 30px;
     margin-top: -17px;
